[dependencies]
cpal = '0.11.0'
crossbeam-channel = '0.4.2'
crossbeam-utils = '0.7.2'
employer = '0.1.0'
find_folder = '0.3.0'
gilrs = '0.7.4'
itertools = '0.9.0'
midir = '0.5.0'
notify = '5.0.0-pre.2'
once_cell = '1.3.1'
rand = '0.7.3'
rodio = '0.11.0'
ron = '0.5.1'
ropey = '1.1.0'
thiserror = '1.0.16'

[dependencies.ryvm_spec]
path = 'spec'

[dependencies.structopt]
default-features = false
version = '0.3.14'

[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
edition = '2018'
name = 'ryvm'
version = '0.1.0'

[profile.release]
debug = true

[workspace]
members = ['spec']
