[dependencies]
cpal = '0.11.0'
crossbeam-channel = '0.4.2'
crossbeam-utils = '0.7.2'
dirs = '2.0.2'
employer = '0.1.0'
gilrs = '0.7.4'
itertools = '0.9.0'
midir = '0.5.0'
notify = '5.0.0-pre.2'
once_cell = '1.3.1'
open = '1.4.0'
rand = '0.7.3'
rodio = '0.11.0'
ropey = '1.1.0'
serde = '1.0.106'
serde_cbor = '0.11.1'
serde_derive = '1.0.106'
thiserror = '1.0.16'
toml = '0.5.6'
bimap = "*"
arrayvec = { version = "*", features = ["serde"] }
colored = "*"
shh = "*"

[dependencies.indexmap]
features = ['serde-1']
version = '1.3.2'

[dependencies.structopt]
default-features = false
version = '0.3.14'

[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
edition = '2018'
name = 'ryvm'
version = '0.1.0'

[profile.dev]
opt-level = 2
